// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEPRECATED_InputField should render a basic text input 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <Label
    className="control-label"
    htmlFor="id-input-2"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    label
  </Label>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-2"
      onChange={[Function]}
      placeholder="placeholder"
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a help text 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-5"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
  <FormText
    color="muted"
    tag="small"
  >
    help text
  </FormText>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a hidden text input 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field"
      hidden={true}
      id="id-input-11"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a lowercase value and convert any uppercase input to lowercase 1`] = `
<InputField
  caseInsensitive={true}
  onChange={[Function]}
  type="text"
  value="value"
>
  <FormGroup
    className="InputField"
    color=""
    tag="div"
  >
    <div
      className="InputField form-group"
      color=""
    >
      <div
        className=""
      >
        <Input
          className="field"
          id="id-input-14"
          onChange={[Function]}
          type="text"
          value="value"
        >
          <input
            className="field form-control"
            id="id-input-14"
            onChange={[Function]}
            type="text"
            value="value"
          />
        </Input>
      </div>
    </div>
  </FormGroup>
</InputField>
`;

exports[`DEPRECATED_InputField should render a number input with an onChange handler, and call this handler on change 1`] = `
<InputField
  onChange={[MockFunction]}
  type="number"
  value="value"
>
  <FormGroup
    className="InputField"
    color=""
    tag="div"
  >
    <div
      className="InputField form-group"
      color=""
    >
      <div
        className=""
      >
        <Input
          className="field"
          id="id-input-10"
          onChange={[Function]}
          type="number"
          value="value"
        >
          <input
            className="field form-control"
            id="id-input-10"
            onChange={[Function]}
            type="number"
            value="value"
          />
        </Input>
      </div>
    </div>
  </FormGroup>
</InputField>
`;

exports[`DEPRECATED_InputField should render a required text input 1`] = `
<FormGroup
  className="InputField required"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-3"
      onChange={[Function]}
      required={true}
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a text input with a right addon 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className="input-group"
  >
    <Input
      className="field"
      id="id-input-8"
      onChange={[Function]}
      type="text"
      value="value"
    />
    <span
      className="input-group-append"
    >
      <span
        className="input-group-text"
      >
        @rightaddon.io
      </span>
    </span>
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a text input with a suffix 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className="with-suffix"
  >
    <Input
      className="field"
      id="id-input-12"
      onChange={[Function]}
      suffix="px"
      type="text"
      value="value"
    />
    <div
      className="input-suffix-wrapper"
    >
      <div
        className="spacer"
      >
        value
      </div>
      <div
        className="suffix"
      >
        px
      </div>
    </div>
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render a text input with an onChange handler, and call this handler on change 1`] = `
<InputField
  onChange={[Function]}
  type="text"
  value="value"
>
  <FormGroup
    className="InputField"
    color=""
    tag="div"
  >
    <div
      className="InputField form-group"
      color=""
    >
      <div
        className=""
      >
        <Input
          className="field"
          id="id-input-9"
          onChange={[Function]}
          type="text"
          value="value"
        >
          <input
            className="field form-control"
            id="id-input-9"
            onChange={[Function]}
            type="text"
            value="value"
          />
        </Input>
      </div>
    </div>
  </FormGroup>
</InputField>
`;

exports[`DEPRECATED_InputField should render a tooltip next to the label 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className="label-wrapper"
  >
    <Label
      className="control-label"
      htmlFor="id-input-6"
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      Label
    </Label>
    <span
      id="id-input-6-tooltip"
    >
      <i
        className="material-icons-outlined tooltip"
      >
        info
      </i>
    </span>
    <Tooltip
      style={
        Object {
          "textAlign": "left",
        }
      }
      target="id-input-6-tooltip"
    >
      I am a tooltip
    </Tooltip>
  </div>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-6"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render an inline required text input 1`] = `
<FormGroup
  className="InputField required d-inline-block"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-7"
      onChange={[Function]}
      required={true}
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render an inline text input 1`] = `
<FormGroup
  className="InputField d-inline-block"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field"
      id="id-input-4"
      onChange={[Function]}
      type="text"
      value="value"
    />
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should render the input with an error 1`] = `
<FormGroup
  className="InputField"
  color="danger"
  tag="div"
>
  <div
    className=""
  >
    <Input
      className="field form-control-danger is-invalid"
      id="id-input-13"
      onChange={[Function]}
      type="text"
      value="value"
    />
    <Errors>
      the value is wrong
    </Errors>
  </div>
</FormGroup>
`;

exports[`DEPRECATED_InputField should use default props 1`] = `
Object {
  "onChange": [Function],
  "type": "text",
  "value": "value",
}
`;
